syntax = "proto3";

//package test;

option java_multiple_files = true;
option java_package = "com.daigai";


service ProductService {
    rpc getProductById(ProductRequest) returns (ProductResponse) {};
    rpc getAllProducts(Empty) returns (stream ProductResponse) {};
    //    rpc getAllProducts(stream UserDetailsRequest) returns (stream UserDetailsResponse) {};
}

message Empty {}

message ProductRequest {
    int64 id = 1;
}

message ProductResponse {
    int64 id = 1;
    string name = 2;
    float prize = 3;
}


//service UserDetailsService {
//  rpc generateRandomUser(UserDetailsRequest) returns (UserDetailsResponse) {};
//  rpc generateRandomUserStream(stream UserDetailsRequest) returns (stream UserDetailsResponse) {};
//}
//
//message UserDetailsRequest {
//  string firstName = 1;
//  string lastName = 2;
//  string city = 3;
//}
//
//message UserDetailsResponse {
//  string id = 1;
//  int32 numericId = 2;
//  string firstName = 3;
//  string lastName = 4;
//  string city = 5;
//}